# robotics-with-ros2

./: README.md  ch1.md  lifecycle.md
docs/: kalibr.md
docs/cpp_examples/: duracion.cpp  execution1.cpp
docs/cpp_examples/lifycicle-components/: my_lifecycle_component.cpp
docs/cpp_examples/lifycicle-components/include/: my_lifecycle_component.hpp
docs/cpp_examples/neural/: Perceptron.h
ex01/src/: minimal_publisher.cpp  minimal_subscriber.cpp  readme.md
ex01_pkg/: CMakeLists.txt  package.xml
ex01_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ex01_pkg/install/ex01_pkg/share/ament_index/resource_index/parent_prefix_path/: ex01_pkg
ex01_pkg/install/ex01_pkg/share/ex01_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ex01_pkg/install/ex01_pkg/share/ex01_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  ex01_pkgConfig.cmake
ex01_pkg/log/: latest_build
ex01_pkg/src/: minimal_publisher.cpp  minimal_subscriber.cpp
ex02/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ex03/src/: safe_node.cpp
prj01/: imu_euler_node.cpp
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/install/: local_setup.sh  setup.sh
ros2_ws/src/cpp_srvcli/install/cpp_srvcli/share/ament_index/resource_index/package_run_dependencies/: cpp_srvcli
ros2_ws/src/cpp_srvcli/install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh
ros2_ws/src/cpp_srvcli/install/cpp_srvcli/share/cpp_srvcli/cmake/: ament_cmake_export_dependencies-extras.cmake
ros2_ws/src/cpp_srvcli/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/cpp_srvcli/share/ament_index/resource_index/parent_prefix_path/: cpp_srvcli
ros2_ws/src/install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh
ros2_ws/src/install/sensor_proximidad/share/ament_index/resource_index/parent_prefix_path/: sensor_proximidad
ros2_ws/src/install/sensor_proximidad/share/sensor_proximidad/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/install/sensor_proximidad/share/sensor_proximidad/cmake/: ament_cmake_export_dependencies-extras.cmake  sensor_proximidadConfig.cmake
ros2_ws/src/log/: latest_build
ros2_ws/src/sensor_proximidad/: CMakeLists.txt
ros2_ws/src/sensor_proximidad/src/: sensor_proximidad.cpp
