cmake_minimum_required(VERSION 3.20)
project(ex01_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

# Buscar rclcpp
find_package(rclcpp REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()



add_executable(minimal_publisher src/minimal_publisher.cpp)
# Especificar las dependencias
ament_target_dependencies(minimal_publisher
  rclcpp
)
add_executable(minimal_subscriber src/minimal_subscriber.cpp)
# Especificar las dependencias
ament_target_dependencies(minimal_subscriber
  rclcpp
)

ament_package()
